# nori

./: .gitmodules  CMakeLists.txt
ext/: CMakeLists.txt
include/nori/: bsdf.h  common.h  device.h  emitter.h  mesh.h  object.h  scene.h  shape.h  texture.h  warp.h
scenes/pa5/ajax/: ajax-normal.xml
scenes/pa5/cbox/: cbox_analytic.xml  cbox_av.xml  cbox_direct.xml  cbox_direct_mts.xml
scenes/pa5/veach_mi/: veach_direct.xml
src/: accel.cpp  chi2test.cpp  common.cpp  diffuse.cpp  mesh.cpp  microfacet.cpp  obj.cpp  object.cpp  parser.cpp  perspective.cpp  scene.cpp  shape.cpp  ttest.cpp  warp.cpp
src/emitters/: area.cpp  point.cpp
src/integrators/: av.cpp  direct.cpp  normal.cpp
src/shapes/: sphere.cpp
src/textures/: checkerboard.cpp  constexture.cpp
